# pwmenu

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
locales/: app.yml
src/: app.rs  icons.rs  launcher.rs  lib.rs  macros.rs  main.rs  menu.rs  notification.rs
src/pw/: commands.rs  controller.rs  devices.rs  engine.rs  graph.rs  links.rs  metadata.rs  nodes.rs  restoration.rs  volume.rs
