[package]
name = "pwmenu"
version = "0.1.0"
edition = "2021"
description = "Launcher-driven audio manager for Linux"
authors = ["e-tho"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/e-tho/pwmenu"
repository = "https://github.com/e-tho/pwmenu"

[dependencies]
pipewire = "0.8"
libspa = "0.8"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "3", features = ["derive"] }
nix = { version = "0.29", features = ["process", "signal"] }
process-wrap = { version = "8.2", features = ["std"] }
signal-hook = "0.3"
notify-rust = "4"
shlex = "1.3"
rust-i18n = "3"
sys-locale = "0.3"

[profile.release]
strip = true
lto = true
